# smoketest_project

./: CMakeLists.txt  Dockerfile  Jenkinsfile  Readme.txt  makefile  smoketest_project  textfileforPR.txt
.githooks/: commit-msg
.github/: config.yml
.scripts/: config-hooks
src/lib/: .component2.cc.swp
src/package1/: fileA.hh
src/package2/: fileB.hh  fileC.hh
tests/: CMakeLists.txt  CTestTestfile.cmake  smoketest_project_tests
tests/unittests/: test_component1.cc
